5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1712_2507.log
== TEST (2019-05-14 23:14:11) 
-- CODE:
qip =  int(input("quantidade inicial de pirarucus: "))
pc =  int(input("percentual de crescimento: "))
t= 0
while(qt < 8000 and qt>0):
	qv= int(input("rettirados para venda: "))
	qt = qt + ((qt * qv)/100) - qv
	t = t+1
if(qt >8000):
	print("MAXIMO")
else:
	print("ZERO")
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(qt < 8000 and qt>0):
NameError: name 'qt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:14:40) 
-- CODE:
qip =  int(input("quantidade inicial de pirarucus: "))
pc =  int(input("percentual de crescimento: "))
t= 0
while(qt < 8000 and qt>0):
	qv= int(input("rettirados para venda: "))
	qt = qt + ((qt * qv)/100) - qv
	t = t+1
if(qt >8000):
	print("MAXIMO")
else:
	print("ZERO")
print(t)

-- EXECUTION TIME:
0.188535
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 4, in <module>
    while(qt < 8000 and qt>0):
NameError: name 'qt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:15:36) 
-- CODE:
qip =  int(input("quantidade inicial de pirarucus: "))
pc =  int(input("percentual de crescimento: "))
t= 0
while(qip < 8000 and qip>0):
	qv= int(input("rettirados para venda: "))
	qip = qip + ((qip * pc)/100) - qv
	t = t+1
if(qip >8000):
	print("MAXIMO")
else:
	print("ZERO")
print(t)

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:16:13) 
-- CODE:
qip =  int(input("quantidade inicial de pirarucus: "))
pc =  int(input("percentual de crescimento: "))
t= 0
while(qip < 8000 and qip>0):
	qv= int(input("rettirados para venda: "))
	qip = qip + ((qip * pc)/100) - qv
	t = t+1
if(qip >8000):
	print("MAXIMO")
else:
	print("ZERO")
print(t)

-- EXECUTION TIME:
0.167369
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:19:29) 
-- CODE:
qip =  int(input("quantidade inicial de pirarucus: "))
pc =  int(input("percentual de crescimento: "))
t= 0
while(qip < 8000 and qip>0):
	qv= int(input("rettirados para venda: "))
	qip = qip + ((qip * pc)/100) - qv
	t = t+1
if(qip >8000):
	print("MAXIMO")
else:
	print("ZERO")
print(t)

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
